CR-2001-07-26-0: Testsuite:
                    - added compile error output to mail on compile error
                    - added compile output log file generation in protocol dir 

JG-2001-07-26-0: (Issue# 15): startup_template: replaced fixed path by reference
                 to SGE_ROOT

CR-2001-07-25-2: Testsuite:
                    - modified compile mail output

CR-2001-07-25-1: Testsuite:
                    - CHECK_EXPECT_MATCH_MAX_BUFFER reset to 640 KB
                    - full_buffer caused not the error in compile_source procedure
                      (removed add_proc_error call in compile_source on full_buffer)
                      (full_buffer themes not to work correctly for multiple spawn/
                       expect calls)
                       

EB-2001-07-25-1: (Issue# 4) fixed build error (LINUX6, ALINUX)

EB-2001-07-25-0: (Issue# 5) qmaster - qconf:
                 - qconf -so|sm does not show comments anymore. 
                 - Comments will only be inserted into spoolfiles. 

CR-2001-07-25-0: Testsuite:
                    - reading CHECK_GROUP and CHECK_USER global variables from
                      check.exp file attributes if environment variables GROUP 
                      and USER aren't set.

CR-2001-07-24-1: uninitialzed variables error/warnings on linux in sge_job.c

CR-2001-07-24-0: Testsuite: 
                    - CHECK_EXPECT_MATCH_MAX_BUFFER set to 6,4 MB
                    - enable empty lines when reading in configuration files
                    - using env(HOST) only when HOST environment is set

JG-2001-07-24-1: qmaster - qdel:
                 - if a job is already in state deleted additional qdel's do 
                   not generate additional events to execd
                 - improved error output concerning tasks to be deleted 
                   (former output contained only job id), additional messages:
                   job "1595" task "4" does not exist