@@ -1,3 +1,7 @@
+CR-2001-07-26-1: Testsuite:
+                    - create protocols directory on compile_source procedure
+                      if it is not existing
+
 CR-2001-07-26-0: Testsuite:
                     - added compile error output to mail on compile error
                     - added compile output log file generation in protocol dir 
